--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aluroni",
+  "name": "dasckup",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,11 +20,14 @@
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://kaiksilva.github.io/Dasckup/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
