--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.30.0",
+    "gh-pages": "^4.0.0",
     "sass": "^1.49.0",
     "typescript-plugin-css-modules": "^3.4.0"
   }
